Fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ h1 {
     .presentation {
       position: relative;
       display: grid;
-      width: 100vw;
+      width: 100%;
       max-height: 100vh;
       transition: 0.5s;
   
@@ -166,17 +166,314 @@ h1 {
 
 /* Small devices (landscape phones, less than 768px)*/
 @media screen and (max-width: 767.98px) {
+  .navbar {
+      position: fixed;
+      bottom: 0vh;
+      z-index: 1000;
+      background-color: #00000021;
+      margin: 0 20px 20px 20px;
+      max-width: fit-content;
+      border-radius: 45px;
   
-}
+    }
+  
+    ul {
+      display: inline-block;
+      margin: 0px 25px;
+    }
+  
+    .toggle-icon {
+      margin-left: auto;
+    }
+  
+    .icon {
+      display: inline;
+      width: 35px;
+      align-content: center;
+      fill: black;
+    }
+  
+    .link-text {
+      visibility: hidden;
+    }
+  
+    .presentation {
+      position: relative;
+      display: grid;
+      width: 100%;
+      max-height: 100vh;
+      transition: 0.5s;
+  
+      background-color: hsla(240, 0%, 100%, 1);
+      background-image:
+        radial-gradient(at 97% 98%, hsla(346, 0%, 100%, 1) 0px, transparent 50%),
+        radial-gradient(at 23% 100%, hsla(240, 0%, 100%, 1) 0px, transparent 50%),
+        radial-gradient(at 100% 67%, hsla(298, 100%, 89%, 0.63) 0px, transparent 50%),
+        radial-gradient(at 0% 64%, hsla(225, 96%, 68%, 0.29) 0px, transparent 50%),
+        radial-gradient(at 12% 25%, hsla(0, 0%, 100%, 1) 0px, transparent 50%),
+        radial-gradient(at 99% 44%, hsla(266, 100%, 65%, 0.36) 0px, transparent 50%);
+    }
+  
+    #pfp {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      top: 10%;
+      left: 40%;
+      margin: auto;
+      width: 120px;
+    }
+  
+    .hi {
+      display: inline-block;
+      position: absolute;
+      margin: 28vh 0vh 0px 25vw;
+      max-width: 300px;
+    }
+  
+    .hi h1 {
+      justify-content: center;
+      font-size: 45px;
+      text-align: center;
+    }
+  
+    .hi h3 {
+      font-size: 15px;
+      text-align: center;
+    }
+  
+  
+    .hi h5 {
+      padding: 5px;
+      text-align: center;
+      font-size: 1rem;
+    }
+  
+    .hi p {
+      padding: 10px;
+      text-align: justify;
+      font-size: 1rem;
+      text-align: center;
+      line-clamp: 20px;
+    }
+  
+    .CV {
+  
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+  }
+
 
 /* Medium devices (tablets, less than 992px)*/
 @media screen and (max-width: 991.98px) {
-  
+    .navbar {
+        position: fixed;
+        bottom: 0vh;
+        z-index: 1000;
+        background-color: #00000021;
+        margin: 0 20px 20px 20px;
+        max-width: fit-content;
+        border-radius: 45px;
+    
+      }
+    
+      ul {
+        display: inline-block;
+        margin: 0px 25px;
+      }
+    
+      .toggle-icon {
+        margin-left: auto;
+      }
+    
+      .icon {
+        display: inline;
+        width: 35px;
+        align-content: center;
+        fill: black;
+      }
+    
+      .link-text {
+        visibility: hidden;
+      }
+    
+      .presentation {
+        position: relative;
+        display: grid;
+        width: 100%;
+        max-height: 100vh;
+        transition: 0.5s;
+    
+        background-color: hsla(240, 0%, 100%, 1);
+        background-image:
+          radial-gradient(at 97% 98%, hsla(346, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 23% 100%, hsla(240, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 100% 67%, hsla(298, 100%, 89%, 0.63) 0px, transparent 50%),
+          radial-gradient(at 0% 64%, hsla(225, 96%, 68%, 0.29) 0px, transparent 50%),
+          radial-gradient(at 12% 25%, hsla(0, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 99% 44%, hsla(266, 100%, 65%, 0.36) 0px, transparent 50%);
+      }
+    
+      #pfp {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        top: 10%;
+        left: 40%;
+        margin: auto;
+        width: 120px;
+      }
+    
+      .hi {
+        display: inline-block;
+        position: absolute;
+        margin: 28vh 0vh 0px 25vw;
+        max-width: 300px;
+      }
+    
+      .hi h1 {
+        justify-content: center;
+        font-size: 45px;
+        text-align: center;
+      }
+    
+      .hi h3 {
+        font-size: 15px;
+        text-align: center;
+      }
+    
+    
+      .hi h5 {
+        padding: 5px;
+        text-align: center;
+        font-size: 1rem;
+      }
+    
+      .hi p {
+        padding: 10px;
+        text-align: justify;
+        font-size: 1rem;
+        text-align: center;
+        line-clamp: 20px;
+      }
+    
+      .CV {
+    
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    
+    
 }
 
 /* Large devices (desktops, less than 1200px)*/
 @media screen and (max-width: 1199.98px) {
-  
+    .navbar {
+        position: fixed;
+        bottom: 0vh;
+        z-index: 1000;
+        background-color: #00000021;
+        margin: 0 20px 20px 20px;
+        max-width: fit-content;
+        border-radius: 45px;
+    
+      }
+    
+      ul {
+        display: inline-block;
+        margin: 0px 25px;
+      }
+    
+      .toggle-icon {
+        margin-left: auto;
+      }
+    
+      .icon {
+        display: inline;
+        width: 35px;
+        align-content: center;
+        fill: black;
+      }
+    
+      .link-text {
+        visibility: hidden;
+      }
+    
+      .presentation {
+        position: relative;
+        display: grid;
+        width: 100%;
+        max-height: 100vh;
+        transition: 0.5s;
+    
+        background-color: hsla(240, 0%, 100%, 1);
+        background-image:
+          radial-gradient(at 97% 98%, hsla(346, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 23% 100%, hsla(240, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 100% 67%, hsla(298, 100%, 89%, 0.63) 0px, transparent 50%),
+          radial-gradient(at 0% 64%, hsla(225, 96%, 68%, 0.29) 0px, transparent 50%),
+          radial-gradient(at 12% 25%, hsla(0, 0%, 100%, 1) 0px, transparent 50%),
+          radial-gradient(at 99% 44%, hsla(266, 100%, 65%, 0.36) 0px, transparent 50%);
+      }
+    
+      #pfp {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        top: 10%;
+        left: 40%;
+        margin: auto;
+        width: 120px;
+      }
+    
+      .hi {
+        display: inline-block;
+        position: absolute;
+        margin: 28vh 0vh 0px 25vw;
+        max-width: 300px;
+      }
+    
+      .hi h1 {
+        justify-content: center;
+        font-size: 45px;
+        text-align: center;
+      }
+    
+      .hi h3 {
+        font-size: 15px;
+        text-align: center;
+      }
+    
+    
+      .hi h5 {
+        padding: 5px;
+        text-align: center;
+        font-size: 1rem;
+      }
+    
+      .hi p {
+        padding: 10px;
+        text-align: justify;
+        font-size: 1rem;
+        text-align: center;
+        line-clamp: 20px;
+      }
+    
+      .CV {
+    
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    
+    
 }
 
 /* X-Large devices (large desktops, less than 1400px)*/
